--- a/.gitignore
+++ b/.gitignore
@@ -171,3 +171,5 @@ cython_debug/
 .pypirc
 instance/config/firebase_config.py
 instance/config/serviceAccountKey.json
+instance/config/firebase_config.py
+instance/config/serviceAccountKey.json
