Füge Firebase-Konfiguration hinzu und aktualisiere .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -173,3 +173,5 @@ instance/config/firebase_config.py
 instance/config/serviceAccountKey.json
 instance/config/firebase_config.py
 instance/config/serviceAccountKey.json
+instance/config/firebase_config.py
+instance/config/serviceAccountKey.json
