--- a/requirements.txt
+++ b/requirements.txt
@@ -7,12 +7,14 @@ certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
-cryptography==44.0.1
+cryptography>=38.0.0,<42
 Deprecated==1.2.18
 distro==1.9.0
 firebase-admin==6.6.0
 Flask==3.1.0
+Flask-Login==0.6.3
 Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.1
 google-api-core==2.24.1
 google-api-python-client==2.161.0
 google-auth==2.38.0
@@ -73,3 +75,7 @@ Werkzeug==3.1.3
 wrapt==1.17.2
 zipp==3.21.0
 psycopg2-binary==2.9.9
+Flask-Migrate==4.0.5
+Flask-SSLify==0.1.5
+Flask-Limiter==3.3.1
+pyOpenSSL==23.2.0
