--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ firebase-admin==6.6.0
 Flask==3.1.0
 Flask-Login==0.6.3
 Flask-SQLAlchemy==3.1.1
+Flask-Migrate==4.0.5
 Flask-WTF==1.2.1
 google-api-core==2.24.1
 google-api-python-client==2.161.0
