--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,9 @@ amqp==5.3.1
 annotated-types==0.7.0
 anyio==4.8.0
 async-timeout==5.0.1
+autopep8==2.3.2
 bcrypt==4.2.1
+bidict==0.23.1
 billiard==4.2.1
 blinker==1.9.0
 CacheControl==0.14.2
@@ -31,10 +33,11 @@ Flask-Limiter==3.3.1
 Flask-Login==0.6.3
 Flask-Mail==0.10.0
 Flask-Migrate==4.0.5
+Flask-SocketIO==5.5.1
 Flask-SQLAlchemy==3.1.1
 Flask-SSLify==0.1.5
 Flask-WTF==1.2.1
-flower==1.0.0
+flower==2.0.1
 google-api-core==2.24.1
 google-api-python-client==2.161.0
 google-auth==2.38.0
@@ -52,8 +55,10 @@ h11==0.14.0
 httpcore==1.0.7
 httplib2==0.22.0
 httpx==0.28.1
+humanize==4.12.1
 idna==3.10
 importlib_metadata==8.5.0
+iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.5
 jiter==0.8.2
@@ -63,6 +68,7 @@ limits==4.0.1
 Mako==1.3.9
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+marshmallow==3.26.1
 mdurl==0.1.2
 msgpack==1.1.0
 numpy==2.2.3
@@ -76,6 +82,8 @@ opentelemetry-semantic-conventions==0.51b0
 opentelemetry-util-http==0.51b0
 ordered-set==4.1.0
 packaging==24.2
+pluggy==1.5.0
+prometheus_client==0.21.1
 prompt_toolkit==3.0.50
 proto-plus==1.26.0
 protobuf==5.29.3
@@ -83,25 +91,34 @@ psycopg2==2.9.10
 psycopg2-binary==2.9.9
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
+pycodestyle==2.12.1
 pycparser==2.22
 pydantic==2.10.6
 pydantic_core==2.27.2
 Pygments==2.19.1
 PyJWT==2.10.1
+PyMySQL==1.1.1
 pyOpenSSL==23.2.0
 pyparsing==3.2.1
+pytest==8.3.5
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+python-engineio==4.11.2
+python-socketio==5.12.1
+pytz==2025.1
 redis==5.2.1
 requests==2.32.3
 rich==13.9.4
 rsa==4.9
 scikit-learn==1.6.1
 scipy==1.15.2
+simple-websocket==1.1.0
 six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.38
 threadpoolctl==3.5.0
+tomli==2.2.1
+tornado==6.4.2
 tqdm==4.67.1
 typing_extensions==4.12.2
 tzdata==2025.1
@@ -111,5 +128,6 @@ vine==5.1.0
 wcwidth==0.2.13
 Werkzeug==3.1.3
 wrapt==1.17.2
+wsproto==1.2.0
 WTForms==3.2.1
 zipp==3.21.0
